--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <title>Your Title</title>
     <script>
-        window.location.replace('./views/layout.ejs');
+        window.location.replace('./views/layout');
     </script>
 </head>
 
